--- a/ES96A_ML2.ipynb
+++ b/ES96A_ML2.ipynb
@@ -153,7 +153,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "#hello its Juliet "
       ],
       "execution_count": 0,
       "outputs": []
